--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: my_own_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,12 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/CashPilot.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/CashPilot.png
