--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.7
+  provider: ^6.1.0
 
 dev_dependencies:
   flutter_test:
