--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.7
   provider: ^6.1.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
